<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TestActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="202dp"
        android:layout_height="232dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="71dp"
        tools:layout_editor_absoluteY="7dp">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:orientation="vertical"></LinearLayout>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/book_hotel"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_56"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Reg"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_5_2022"
                android:textSize="12sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_3_2"
            android:textSize="12sp" />

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Button" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="202dp"
        android:layout_height="56dp"
        android:background="#CFCFCF"
        tools:layout_editor_absoluteX="71dp"
        tools:layout_editor_absoluteY="131dp">

        <TextView
            android:id="@+id/textView14"
            android:layout_width="92dp"
            android:layout_height="55dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/_61228459"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="80dp"
            android:layout_height="56dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/_6_2020"
            android:textSize="12sp" />
    </LinearLayout>

    <Button
        android:id="@+id/button2"
        android:layout_width="601dp"
        android:layout_height="56dp"
        android:text="@string/Ex"
        android:textSize="12sp"
        tools:layout_editor_absoluteY="374dp" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        tools:layout_editor_absoluteX="32dp"
        tools:layout_editor_absoluteY="251dp" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        tools:layout_editor_absoluteX="46dp"
        tools:layout_editor_absoluteY="319dp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/edit"
        tools:layout_editor_absoluteX="120dp"
        tools:layout_editor_absoluteY="509dp" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:srcCompat="@drawable/covid-19"
        tools:layout_editor_absoluteX="216dp"
        tools:layout_editor_absoluteY="443dp"
        tools:srcCompat="@drawable/covid-19"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>